# My_first_programm_CMake

Задача_1_Простейший_проект/: CMakeLists.txt  get_Name.cpp
Задача_2_Проект посложнее/: CMakeLists.txt  Figure.h  Header.h  Rectangles.h  Source.cpp  Square.h  class_Rectangles.cpp  class_Square.cpp
