cmake_minimum_required(VERSION 3.22.0)
project(my_second_project_cmake)
add_executable(programm_figure Source.cpp class_Equilateral_triangle.cpp class_Isosceles_triangle.cpp class_Rectangles.cpp class_Figure.cpp class_Parallelogram.cpp class_Triagle.cpp
class_Quadrangle.cpp class_Rectangular_triangle.cpp class_Rhomb.cpp class_Square.cpp class_Triagle.cpp)
